app/css/app.css
/* ... */
div.toolbox span {
    float: left;
    width: 425px;
    text-align: left;
    text-transform: uppercase;
    font-size: 11px;
}

div.toolbox span.toolbtn {
    float: none;
    width: auto;
    text-align: left;
    text-transform: uppercase;
    font-size: 11px;
}

div.toolbox span i {
    padding: 0px 5px;
    border-radius: 2px;
    font-style: normal;
}

div.toolbox a {
    padding: 0px 5px;
    border-radius: 3px;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 11px;
}

.type {
    padding: 2px 8px;
    border-radius: 3px;
    text-decoration: none;
    text-transform: uppercase;
    font-weight: 700;
}

aside {
    -webkit-flex: 0 0 30%;
    height: 100%;
}

aside.wide {
    -webkit-flex:auto;
    height: 100%;
}

aside ul {
    -webkit-flex: 1;
    overflow-y: scroll;
    margin: 0;
    padding: 0px;
    min-height: 0;
    list-style: none;
}

aside ul li {
    position: relative;
}

aside ul li a {
    display: block;
    padding: 10px 20px;
    text-decoration: none;
    text-decoration: none;
    font: 300 16px 'trebuchet ms', arial, sans-serif;
    cursor: pointer;
}

aside ul li a:first-child {
    border-top: none;
}

aside footer,
.main footer {
    padding: 5px;
    font: 300 14px 'trebuchet ms', arial, sans-serif;
}

.main footer {
    text-align: center;
}

aside footer div {
    display: -webkit-flex;
    -webkit-flex-direction: row;
}

aside footer span:first-child {
    -webkit-flex: 1 0 0;
}

.main {
    -webkit-flex: 1;
}

menu {
    -webkit-padding-start: 0px;
}

.main section {
    -webkit-flex: 1;
    overflow-y: scroll;
    padding: 20px;
    min-height: 0;
    font-size: 14px;
}

div.main header .button {
    float: right;
    margin: 10px 0px 0px 5px;
}

div.main header .button i {
    padding: 6px;
    border-radius: 3px;
    text-decoration: none;
    position: relative;
    display: inherit;
}

div.main header a .notify span {
    border: 3px solid #C00;
    position: absolute;
    left: 0;
    color: #FFF;
    font-size: 8px;
    background: #C00;
    top: 0;
    padding: 0;
    text-shadow: none;
    box-shadow: 1px 1px 0px #F2F2F2;
}

div.main img.gravatar {
    top: 0px;
    padding: 0px;
    width: 34px;
    border-radius: 3px;
    text-decoration: none;
}

div.comments {
    position: relative;
    z-index: 9;
    overflow-x: auto;
    margin: 0;
    padding: 10px;
    text-align: left;
    font-size: 14px;
    line-height: 14px;
}

div.comments .clicky {
    display: block;
    cursor: pointer;
}

div.comments i {
    float: right;
}

.the-gist {
    margin: 0px 0px 20px 0px;
    padding: 0px;
}

.the-gist pre {
    margin: 0;
    padding: 10px;
}

.the-gist-name {
    position: relative;
    padding: 10px;
}

.the-gist-name a {
    position: relative;
    top: 0px;
    right: -10px;
    display: block;
    float: right;
    width: 38px;
    height: 22px;
    text-align: center;
    text-decoration: none;
    font-size: 20px;
}

.messenger {
    display: none;
    padding: 10px;
    font-size: 14px;
    cursor: pointer;
    position: absolute;
    bottom: 75px;
    z-index: 10;
    right: 20px;
    border-radius: 3px;
    box-shadow: 1px 1px 5px #000;
}

.login .messenger {
    display: none;
    padding: 10px;
    font-size: 14px;
    cursor: pointer;
    position: relative;
    top:0;
    right:inherit;
    margin: 0 auto;
    z-index: 10;
    border-radius: 3px;
    box-shadow: 1px 1px 5px #000;
}

.login .messenger i {
    font-size: 14px;
}

.messenger.info {
    background: #0480BE;

}

.messenger.edit {
    background: goldenrod;
}

.messenger.warn {
    background: #b94a48;
}

.messenger.ok {
    background: #468847;
}

.messenger span code {
    font: 700 1em cursive;
}

.messenger a {
    padding: 0px 3px;
    border-radius: 2px;
    background: #FFF;
    box-shadow: 1px 1px 1px #555;
    color: #555;
    text-decoration: none;
    text-transform: uppercase;
    text-shadow: none;
    font-weight: 100;
    font-size: 12px;
}

.messenger a:hover {
    box-shadow: none;
}

aside header input {
    position: absolute;
    top: 10px;
    right: 5px;
    padding: 5px 10px;
    width: 50%;
    height: 33px;
    border-radius: 21px;
}

#empty {
    font-size: 30px
}

.the-comments span {
    height:50%;
    margin: 10px 0;
    padding: 0px 10px;
    display: block;
}

.the-comments a.post-comment {
    background: #555;
    color: #FFF;
    padding: 3px 10px;
    border-radius: 3px;
}

.the-comments span a {
    text-decoration: underline;
}

.the-comments .comment-text-holder,
.the-comments .comment-holder {
    position: relative;
}

.the-comments textarea {
    width: 100%;
    background: rgba(0, 0, 0, 0);
    border: none;
    padding: 20px 0;
    height: 100px;
}

.the-comments .preview,
.the-comments .trash,
.the-comments .edit {
    position: absolute;
    top: 0;
    right: 0;
    color: #FFF;
    padding: 5px 10px;
    text-decoration: none;
}

.the-comments .preview {
    background: cornflowerblue;
    border-radius: 0px 0px 0px 5px;
}

.the-comments .trash {
    background: tomato;
    border-radius: 0px 0px 0px 5px;
}

div.blockquote {
    margin-left: 0;
    text-indent: 10px;
}

div.blockquote p {
    padding: 0 10px;
    text-indent: 0;
    line-height: 21px;
}

div.main .the-comments .comment_gravatar {
    width: 34px;
    border-radius: 3px;
    vertical-align: middle;
}

/** login form **/
.login-form {
    margin: auto;
    width: 454px;
    -webkit-border-radius: 16px;
    border-radius: 16px;
    background: transparent;
    text-align: center;
    position: relative;
}

.login p {
    font-size: 16px;
}

.login-form .spiner {
    margin: 10px auto
}

.login-form header {
    padding: 20px 0px 10px;
    text-align: center;
}

.login-form i {
    font-size: 49px;
}

.login-form i.icon-arrow-left, .login-form a {
    font-size: 16px;
}

.login-form h1 {
}
/* ... */

